--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,21 @@
 /* Add spacing between each country suggestion */
-.suggestion {
-    padding-left: 2px;
-    padding-right: 2px;
-}
-
-/* Change suggestion color when hovering it with the mouse */
-.suggestion:hover {
-    background-color: #adf;
-    cursor: pointer;
-}
-
-/* Position the suggestion list just below the input box */
-#suggestions {
-    position: absolute;
+table, th, td {
     border: 1px solid black;
-    left: 155px;
+  }
+table {
+    border-collapse: collapse;
+  }
+
+th, td {
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+  
+th {
+  background-color: lightgrey;
+}
+
+
+.html {
+  font-family: Calibri, sans-serif;
 }
